bk_ida/gccida/c3/subst_asm_stack_regs
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2361:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2361:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2362:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2362:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2370:6: error: use of undeclared identifier 'v42'
rtx *v42; // r9 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2373:4: error: expected ';' after expression
rtx v45; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2373:5: error: use of undeclared identifier 'v45'
rtx v45; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2377:8: error: use of undeclared identifier 'v49'
rtx ( *v49)[59]; // rcx 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2379:6: error: use of undeclared identifier 'v51'
rtx *v51; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2389:8: error: use of undeclared identifier 'v61'
rtx ( *v61)[59]; // rcx 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2395:7: error: use of undeclared identifier 'v67'; did you mean 'v62'?
rtx **v67; // r10 
      ^~~
      v62
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2390:7: note: 'v62' declared here
int **v62; // rdx 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2395:5: error: invalid operands to binary expression ('struct rtx_def *' and 'int *')
rtx **v67; // r10 
~~~ ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2396:4: error: expected ';' after expression
rtx v68; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2396:5: error: use of undeclared identifier 'v68'
rtx v68; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2400:6: error: use of undeclared identifier 'v72'
rtx *v72; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2404:4: error: expected ';' after expression
rtx v76; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2404:5: error: use of undeclared identifier 'v76'
rtx v76; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2407:4: error: expected ';' after expression
rtx v79; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/reg-stack.c:2407:5: error: use of undeclared identifier 'v79'
rtx v79; // rsi 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_asm_stack_regs/src/obj/reg-stack.o] Error 1
